@startuml LightSm

'//////////////////// STATE ORGANIZATION ////////////////////
' Note: StateSmith treats state names and events as case insensitive.
' More info: https://github.com/StateSmith/StateSmith/wiki/PlantUML

[*] -> OFF

state ON_GROUP {
    [*] -> ON1
    state ON1
    state ON2
    state ON3
}


'//////////////////// STATE HANDLERS ////////////////////

'OFF
OFF: enter / print("---");
OFF --> ON1 : inc

'ON_GROUP
ON_GROUP --> OFF: off

'ON1
ON1: enter / print("$--");
ON1 --> ON2 : inc
ON1 --> OFF : dim

'ON2
ON2: enter / print("$$-");
ON2 --> ON3 : inc
ON2 --> ON1 : dim

'ON3
ON3: enter / print("$$$");
ON3: enter / count++;
ON3 --> ON2 : dim



'######################## StateSmith config ########################
' The below special comment block sets the StateSmith configuration.
' More info: https://github.com/StateSmith/StateSmith/issues/335
' Feel free to remove or modify it as needed.

/'! $CONFIG : toml

[RenderConfig]
FileTop = """
    "use strict";
    """
# Note that we want the below default expansion to be a single line to avoid extra newlines in the generated code.
DefaultAnyExpTemplate = """this.{AutoNameCopy()}"""

[RenderConfig.JavaScript]
ExtendsSuperClass = "LightSmBase"

[SmRunnerSettings]
transpilerId = "JavaScript"

[SmRunnerSettings.simulation]
enableGeneration = false
'/

@enduml
